<resources>
    <string name="app_name">Kabar</string>
    <string name="Greeting">Hello</string>
    <string name="Again">Again!</string>
    <string name="Welcome">Welcome back you’ve been missed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Quay lại</string>
    <string name="enterEmail">Don’t worry! it happens. Please enter the address associated with your account.</string>
    <string name="forgot_password">Forgot the Password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_account">Don’t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="Submit">Submit</string>
    <string name="verification_code_header">OTP Verification</string>
    <string name="otp_instruction">Please enter the OTP sent to your email</string>
    <string name="resend_otp">Resend code in</string>
    <string name="verify">Xác minh</string>
    <string name="reset_password_headerReset">Reset</string>
    <string name="reset_password_headerPassword">Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="continue_button">Tiếp tục</string>
    <string name="Verify">Verify</string>
    <string name="password_reset_successful_header">Congratulations!</string>
    <string name="password_reset_successful_instruction">Your account is ready to use</string>
    <string name="back_to_login_button">Go to Homepage</string>
    <string name="fill_profile_header">Fill your profile</string>
    <string name="add_picture_button">Add Picture</string>"
    <string name="username_hint">Username</string>
    <string name="full_name_hint">Full Name</string>
    <string name="email_hint">Email</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="next_button">Next</string>"
</resources>