<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp"
    tools:context=".ui.auth.resetPassword.ResetPasswordSuccessFragment">

    <!-- Success Icon -->
    <ImageView
        android:id="@+id/iv_success_icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/framekabar"
        app:layout_constraintBottom_toTopOf="@id/tv_success_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>
    <!-- Success Header Text -->
    <TextView
        android:id="@+id/tv_success_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/password_reset_successful_header"
        android:textColor="@color/grey"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_success_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_success_icon" />

    <!-- Success Instruction Text -->
    <TextView
        android:id="@+id/tv_success_instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_reset_successful_instruction"
        android:textColor="@color/grey"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btn_back_to_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_success_header" />

    <!-- Back to Login Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back_to_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/back_to_login_button"
        android:backgroundTint="@color/blue"
        android:textSize="16sp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
