<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white"
    tools:context=".ui.auth.otp.OTPFragment">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon"
        app:tint="@color/black" />

    <!-- Header Section -->
    <TextView
        android:id="@+id/tv_header_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/verification_code_header"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/otp_instruction"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_header_otp" />

    <!-- OTP Input Fields -->
    <LinearLayout
        android:id="@+id/ll_otp_fields"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_instruction">

        <EditText
            android:id="@+id/et_otp_1"
            style="@style/OtpDigitStyle"
            tools:text="1" />

        <EditText
            android:id="@+id/et_otp_2"
            style="@style/OtpDigitStyle"
            android:layout_marginStart="8dp"
            tools:text="2" />

        <EditText
            android:id="@+id/et_otp_3"
            style="@style/OtpDigitStyle"
            android:layout_marginStart="8dp"
            tools:text="3" />

        <EditText
            android:id="@+id/et_otp_4"
            style="@style/OtpDigitStyle"
            android:layout_marginStart="8dp"
            tools:text="4" />

        <EditText
            android:id="@+id/et_otp_5"
            style="@style/OtpDigitStyle"
            android:layout_marginStart="8dp"
            tools:text="5" />

        <EditText
            android:id="@+id/et_otp_6"
            style="@style/OtpDigitStyle"
            android:layout_marginStart="8dp"
            tools:text="6" />
    </LinearLayout>

    <!-- Timer and Resend OTP -->

    <!-- Verify Button -->

    <LinearLayout
        android:id="@+id/ll_resend_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_otp_fields">

        <TextView
            android:id="@+id/tv_resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/resend_otp"
            android:textColor="@color/grey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/red"
            android:textSize="16sp"
            tools:text="59s" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_verify"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/Verify"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Loading Indicator -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/btn_verify"
        app:layout_constraintEnd_toEndOf="@id/btn_verify"
        app:layout_constraintStart_toStartOf="@id/btn_verify"
        app:layout_constraintTop_toTopOf="@id/btn_verify" />

</androidx.constraintlayout.widget.ConstraintLayout>